--- a/WeatherAp.html
+++ b/WeatherAp.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<title>Weather Ap</title>
 	<link rel="stylesheet" type="text/css" href="WeatherAp.css">
-	<script src= 'http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+	<!-- <script src= 'http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script> -->
+	<script src= '../jquery-3.0.0.js'></script>
+	<!-- <script type="text/javascript" src="C:/Users/Daniel Durr/Desktop/HTML5/JQuery/jquery-3.0.0.js"></script> -->
 	<script type="text/javascript">
 
 	$(document).ready(function(){
@@ -15,7 +17,7 @@
 
 			var url = "http://api.openweathermap.org/data/2.5/weather?q=" + CityName + "&APPID=8860752bd66bbafe392f03b38c570be8";
 			$.get(url, function(resp){
-				console.log(resp);
+				// console.log(resp);
 
 				var CityActual = resp.name;
 				var Temp = Math.floor((resp.main.temp * 9/5)-459.67);
@@ -28,7 +30,7 @@
 				$("#RightSide").append("<table><tr><td>Searched Term: "+CityName+"</td></tr><tr><td id='C'>City Found: "+CityActual+"</td></tr><tr><td>Temp: "+Temp+"(F)</td></tr><tr><td>Humidity: "+Humid+"%</td></tr><tr><td>Wind Speed: "+Wind+"(mph)</td></tr><tr><td>Sunset: "+D+"</td></tr></table>");
 			})
 
-			console.log(url);
+			// console.log(url);
 			alert('Submitted!');
 			return false;
 		})
